--- a/Views/GameGallery/Index.cshtml
+++ b/Views/GameGallery/Index.cshtml
@@ -4,44 +4,25 @@
 }
 @if (Model != null)
 {
-    <div class="row">
+
+    <div class="row mb-7 mt-7">
         @foreach (var genre in Model)
         {
-            <div class="col-12 col-md-4 mt-3">
-                <div class="card shadow-lg genre-card">
-                    <img class="card-img-top" src="@Url.Content($"~/img/genres/{genre.ImageUrl}.png")">
-                    <div class="position-relative" style="height: 50px;overflow: hidden;margin-top: -50px;z-index:2;position: relative;">
-                        <div class="position-absolute w-100 top-0" style="z-index: 1;">
-                            <svg class="waves waves-sm" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 40" preserveAspectRatio="none" shape-rendering="auto">
-                                <defs>
-                                    <path id="card-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"></path>
-                                </defs>
-                                <g class="moving-waves">
-                                    <use xlink:href="#card-wave" x="48" y="-1" fill="rgba(100,100,100,0.30"></use>
-                                    <use xlink:href="#card-wave" x="48" y="3" fill="rgba(55,55,55,0.35)"></use>
-                                    <use xlink:href="#card-wave" x="48" y="5" fill="rgba(55,55,55,0.25)"></use>
-                                    <use xlink:href="#card-wave" x="48" y="8" fill="rgba(55,55,55,0.20)"></use>
-                                    <use xlink:href="#card-wave" x="48" y="13" fill="rgba(55,55,55,0.15)"></use>
-                                    <use xlink:href="#card-wave" x="48" y="16" fill="rgba(55,55,55,0.99)"></use>
-                                </g>
-                            </svg>
+            <div class="col-md-4 mt-4">
+                <a href="javascript:;">
+                    <div class="card card-background move-on-hover">
+                        <div class="full-background" style="background-image: url('@Url.Content($"~/img/genres/{genre.ImageUrl}.png")')">
+                            <div class="card-body pt-12">
+                                <h4 class="text-white text-center">@genre.FullName</h4>
+                                <a asp-action="GetGames" asp-controller="GameGallery" asp-route-id="@genre.GenreId" class="custom-btn btn-12 button"><span>Click To See @genre.GameGenres.Count() Games</span><span>See Games</span></a>
+                            </div>
                         </div>
                     </div>
-                    <div class="card-body black-card">
-                        <h4>
-                            @genre.Name 
-                        </h4>
-                        <p>
-                            @genre.FullName
-                        </p>
-                        <a asp-action="GetGames" asp-route-id="@genre.GenreId" class="btn bg-gradient-info">Go To Genre -  @genre.GameGenres.Count()</a>
-
-                    </div>
-                </div>
+                </a>
             </div>
-
         }
     </div>
+    <div class="row mt-7 mb-7"></div>
 }
 else
 {
