--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,15 +6,15 @@
     <title>@ViewData["Title"] - GameGallery</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="~/assets/css/soft-design-system-pro.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/GameGallery.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm bg-gradient-faded-dark-vertical text-white">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm text-white">
             <div class="container-fluid">
                 <a class="navbar-brand text-white" asp-area="" asp-controller="GameGallery" asp-action="Index">GameGallery</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -22,58 +22,95 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <div class="container indigo borderXwidth">
-                        <ul class="nav text-center">
-                            <li class="nav-item dropdown mr-3 ml-3">
-                                <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Games
-                                </button>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" asp-action="Index" asp-controller="GameGallery">Games</a></li>
-                                </ul>
-                            </li>
 
+                    @if (ViewBag.user != null)
+                    {
+                        <div class="borderXwidth">
+                            <ul class="nav text-center">
+                                <li class="nav-item dropdown mr-3 ml-3">
+                                    <button class="custom-btn btn-3 button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <span>Games</span>
+                                    </button>
+                                    <ul class="dropdown-menu bg-dark text-center">
+                                        <li><a class="custom-btn btn-3 button" asp-action="Index" asp-controller="GameGallery">Games</a></li>
+                                    </ul>
+                                </li>
+                                <li class="nav-item dropdown mr-3 ml-3">
+                                    <button class="custom-btn btn-3 button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <span>@ViewBag.user.Email's Account</span>
+                                    </button>
+                                    <ul class="dropdown-menu bg-dark text-center">
+                                        <li><a asp-action="Profile" asp-controller="Users" asp-route-id="@ViewBag.user.UserId" class="custom-btn btn-3 button"><span>Profile</span></a></li>
+                                        <form asp-controller="Users" asp-action="Logout" method="post">
+                                            @Html.AntiForgeryToken()
+                                        <li><button type="submit" class="custom-btn btn-3 button"><span>Logout</span></button></li>
+                                        </form>
 
-                            @* <li class="nav-item dropdown">
-                            <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                    </ul>
+                                </li>
 
-                            </button>
-                            <ul class="dropdown-menu dropdown-menu-dark">
-                            <li class="nav-item"><a class="dropdown-item" asp-action="Index" asp-controller="GameGallery">Games</a></li>
                             </ul>
-                            </li> *@
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="container borderXwidth">
+                            <ul class="nav text-center">
 
-                            <li class="nav-item dropdown mr-3 ml-3">
-                                <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Account
-                                </button>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" asp-action="Register" asp-controller="Users">Register</a></li>
-                                    <li><a class="dropdown-item" asp-action="Login" asp-controller="Users">Login</a></li>
-                                </ul>
-                            </li>
+                                <li class="nav-item dropdown">
+                                    <button class="custom-btn btn-3 button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <span>Accounts</span>
+                                    </button>
+                                    <ul class="dropdown-menu bg-dark text-center">
+                                        <li><a asp-action="Login" asp-controller="Users" class="custom-btn btn-3 button"><span>Login</span></a></li>
+                                        <li><a asp-action="Register" asp-controller="Users" class="custom-btn btn-3 button"><span>Register</span></a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    }
 
 
-                        </ul>
-                    </div>
+
+
+
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container-fluid">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - GameGallery
-        </div>
-    </footer>
+    <div style="bottom:0;position: fixed; width:100%;">
+        <hr style="width:100%;" />
+        <footer>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 col-md-3">
+                        @if (ViewBag.user != null)
+                        {
+                            <h4 class="text-center text-primary">@ViewBag.user.Email</h4>
+                        }
+                        else
+                        {
+                            <p class="text-primary">Need To Sign In?</p>
+                        }
+                    </div>
+                    <div class="col-12 col-md-3"></div>
+                    <div class="col-12 col-md-3"></div>
+                    <div class="col-12 col-md-3"></div>
+                </div>
+            </div>
+        </footer>
+    </div>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/assets/js/core/popper.min.js" type="text/javascript"></script>
     <script src="~/assets/js/core/bootstrap.min.js" type="text/javascript"></script>
     <script src="~/assets/js/plugins/perfect-scrollbar.min.js" type="text/javascript"></script>
+    <script src="~/assets/js/plugins/typedjs.js"></script>
     <script src="~/assets/js/plugins/moment.min.js"></script>
 
 
@@ -85,15 +122,12 @@
 
     <!--	Plugin for Select, full documentation here: https://joshuajohnson.co.uk/Choices/ -->
     <script src="~/assets/js/plugins/choices.min.js" type="text/javascript"></script>
-
-
-    <!--  Google Maps Plugin    -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.0.1/vue.min.js" type="text/javascript"></script>
+    <script src="~/assets/js/plugins/chartjs.min.js"></script>
+    <script src="~/js/VueApp.js"></script>
     <!-- Control Center for Soft UI Design System: parallax effects, scripts for the example pages etc -->
     <script src="~/assets/js/soft-design-system-pro.min.js" type="text/javascript"></script>
-    <script src="~/js/VueApp.js"></script>
-
     <script src="~/js/site.js" asp-append-version="true"></script>
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
