--- a/Views/Users/Register.cshtml
+++ b/Views/Users/Register.cshtml
@@ -1,1 +1,53 @@
-﻿
+﻿@model GameGallery.Models.RegisterViewModel
+@{
+    Layout = "_Layout";
+}
+
+<div class="row">
+    <div class="col-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3">
+        <div class="card card-dark shadow-lg p-3 border-radius-lg mt-7">
+            <h1 class="text-center text-info">Register</h1>
+            <div class="card-body">
+                <form asp-action="RegisterUser" asp-controller="Users" method="post" id="RegisterForm">
+                    <div class="form-group">
+                        <div class="alert-outline-danger validationAlert" role="alert">
+                            <span asp-validation-for="FirstName" class="text-danger"></span>
+                        </div>
+                        <input type="text" asp-for="FirstName" class="form-control" placeholder="First Name" autocomplete="off">
+                    </div>
+                    <div class="form-group">
+                        <div class="alert-outline-danger validationAlert" role="alert">
+                            <span asp-validation-for="LastName" class="text-danger"></span>
+                        </div>
+                        <input type="text" asp-for="LastName" class="form-control" placeholder="Last Name" autocomplete="off">
+                    </div>
+                    <div class="form-group">
+                        <div class="alert-outline-danger validationAlert" role="alert">
+                            <span asp-validation-for="Username" class="text-danger"></span>
+                        </div>
+                        <input type="text" asp-for="Username" class="form-control" placeholder="Username" autocomplete="off">
+                    </div>
+                    <div class="form-group">
+                        <div class="alert-outline-danger validationAlert" role="alert">
+                            <span asp-validation-for="Email" class="text-danger"></span>
+                        </div>
+                        <input type="email" asp-for="Email" class="form-control" placeholder="Email" autocomplete="off">
+                    </div>
+                    <div class="form-group">
+                        <div class="alert-outline-danger validationAlert" role="alert">
+                            <span asp-validation-for="Password" class="text-danger"></span>
+                        </div>
+                        <input type="password" asp-for="Password" class="form-control" placeholder="Password" autocomplete="off">
+                    </div>
+                    <div class="form-group">
+                        <div class="alert-outline-danger validationAlert" role="alert">
+                            <span asp-validation-for="Confirmed" class="text-danger"></span>
+                        </div>
+                        <input type="password" asp-for="Confirmed" class="form-control" placeholder="Confirm Password" autocomplete="off">
+                    </div>
+                    <button type="submit" class="custom-btn btn-3 button"><span>Register</span></button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
